--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ably": "^1.2.50",
     "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
